# PartioExportForSoftimage

./: CMakeLists.txt  LICENSE  PartioExportForSoftimage.cpp  README.md
